[gd_scene load_steps=16 format=3 uid="uid://cd677dly81nmm"]

[ext_resource type="Script" path="res://Scenes/GameManager.gd" id="1_kw0tf"]
[ext_resource type="PackedScene" uid="uid://bma4k1ljc8lvk" path="res://Scenes/player.tscn" id="1_wvqgd"]
[ext_resource type="Texture2D" uid="uid://co5yufjwnko1o" path="res://Assets/Sprites/background3.png" id="2_g0j4u"]
[ext_resource type="AudioStream" uid="uid://caid7a7h5fi3h" path="res://Assets/Sounds/background.wav" id="2_wh2tt"]
[ext_resource type="AudioStream" uid="uid://baacbecp1efy8" path="res://Assets/Sounds/ending.wav" id="3_i1n0b"]
[ext_resource type="PackedScene" uid="uid://dp7qj7avqba8f" path="res://Scenes/ground.tscn" id="3_ttf4k"]
[ext_resource type="AudioStream" uid="uid://3slv3cfi8ah6" path="res://Assets/Sounds/level1.wav" id="4_07q3b"]
[ext_resource type="PackedScene" uid="uid://cwv2o86pplvt4" path="res://Scenes/ceiling.tscn" id="4_bnufq"]
[ext_resource type="AudioStream" uid="uid://bulxs28n7okj8" path="res://Assets/Sounds/title.wav" id="4_iiu6k"]
[ext_resource type="AudioStream" uid="uid://blqtbee5ai4c6" path="res://Assets/Sounds/level2.wav" id="5_w6n2h"]
[ext_resource type="PackedScene" uid="uid://im8sy0xrui6" path="res://Scenes/pipe_spawner.tscn" id="5_yqo4h"]
[ext_resource type="AudioStream" uid="uid://citq2hn0n4dd1" path="res://Assets/Sounds/level3.wav" id="6_5m5aa"]
[ext_resource type="PackedScene" uid="uid://dr7x4c4j16215" path="res://Scenes/fade.tscn" id="7_0m8s2"]
[ext_resource type="AudioStream" uid="uid://ctq7pl6rkogm6" path="res://Assets/Sounds/6.wav" id="8_ln7tj"]
[ext_resource type="PackedScene" uid="uid://c1qmbm8wd442o" path="res://Scenes/ui.tscn" id="8_ykmbq"]

[node name="main" type="Node"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_kw0tf")

[node name="background1" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("2_wh2tt")

[node name="background2" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("4_iiu6k")
volume_db = -5.0

[node name="background3" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("4_07q3b")
volume_db = -5.0

[node name="background4" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("5_w6n2h")
volume_db = -5.0

[node name="background5" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("6_5m5aa")

[node name="gameover" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("3_i1n0b")

[node name="CrashSound" type="AudioStreamPlayer2D" parent="GameManager"]
stream = ExtResource("8_ln7tj")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1.00001, -1.00001)
scale = Vector2(0.66875, 0.666667)
texture = ExtResource("2_g0j4u")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 0)

[node name="PipeSpawner" parent="." instance=ExtResource("5_yqo4h")]

[node name="Ground" parent="." instance=ExtResource("3_ttf4k")]
position = Vector2(149, 233)

[node name="Ceiling" parent="." instance=ExtResource("4_bnufq")]
position = Vector2(180, -233)

[node name="Player" parent="." instance=ExtResource("1_wvqgd")]
position = Vector2(-379, -4)

[node name="Fade" parent="." instance=ExtResource("7_0m8s2")]

[node name="UI" parent="." instance=ExtResource("8_ykmbq")]
